tests/snapshots/presenter__presenter_picker.snap
---
source: tests/presenter.rs
expression: "render(&picker_state(), 100, 24)"
---
"┌r─────────────────────────────────────┐┌main.rs───────────────────────────────────────────────────┐"
"│  ▾ src                               ││Showing first 5000 lines (truncated)                      │"
"│M   main.rs                           ││delta not found — showing plain diff                      │"
"│    ▾ inner                           ││fn main() {                                               │"
"│A     added.rs                        ││    println!("hello");                                    │"
"│  README.md                           ││}                                                         │"
"│D gone.txt                            ││                                                          │"
"│? scratch.log                         ││                                                          │"
"│                         ┌Switch worktree─────────────────────esc close┐                          │"
"│                         │                                             │                          │"
"│                         │ ● /work/main [main] (current)               │                          │"
"│                         │   /work/feature [feature-x]  ● working      │                          │"
"│                         │   /work/detached (detached)                 │                          │"
"│                         │                                             │                          │"
"│                         └─↑↓ move · ←→ scroll · ⏎ switch · esc cancel─┘                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"└──────────────────────────────────────┘└Source──────────────────────────────────────────────? help┘"
